crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__year__multiple__range__all.snap
---
source: crates/tools/cron/src/tests/unit/year.rs
expression: result
---
Ok(
    (
        "",
        YearRule {
            kinds: [
                YearKind {
                    range: (
                        Year(
                            2024,
                        ),
                        Year(
                            2026,
                        ),
                    ),
                    periodic: YearPeriodic(
                        1,
                    ),
                },
                YearKind {
                    range: (
                        Year(
                            1970,
                        ),
                        Year(
                            2199,
                        ),
                    ),
                    periodic: YearPeriodic(
                        1,
                    ),
                },
            ],
        },
    ),
)
